--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
     </a>
     <a class="school-logo" href="legon.html">
         <img src="legon logo.jpg" alt="legon Logo">
-        <span>UCC</span>
+        <span>LEGON</span>
       </a>
       <a class="school-logo" href="knust.html">
         <img src="knust.jpg" alt="knust Logo">
-        <span>UCC</span>
+        <span>KNUST</span>
       </a>
     <!-- Future school logos go here -->
   </div>
